<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tryout.cameraintegration.ColorEditingActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_red"
            android:onClick="decideColors"
            android:id="@+id/button_red"
            android:layout_weight="1"
            android:textColor="#ffff4444" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_green"
            android:onClick="decideColors"
            android:id="@+id/button_green"
            android:layout_weight="1"
            android:textColor="#ff99cc00" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_blue"
            android:onClick="decideColors"
            android:id="@+id/button_blue"
            android:layout_weight="1"
            android:textColor="#ff33b5e5" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView2"
        android:layout_weight="1"
        android:contentDescription="@string/captured_image" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetColor"
            android:text="@string/button_scaled"
            android:id="@+id/button_scaled"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetColor"
            android:text="@string/button_original"
            android:id="@+id/button_original"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
